# ChangeLog for media-plugins/xmmplayer
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmmplayer/Attic/ChangeLog,v 1.4 2004/02/15 12:06:58 eradicator Exp $

  15 Feb 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmmplayer-0.2.1.ebuild, xmmplayer-0.3.1.ebuild:
  Removed arm from arch.  Ebuild Cleanup.

*xmmplayer-0.3.1 (25 Jan 2004)

  25 Jan 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xmmplayer-0.2.1.ebuild, xmmplayer-0.3.1.ebuild:
  version bump closes bug #39241

*xmmplayer-0.2.1 (14 Sep 2003)

  14 Sep 2003; Seemant Kulleen <seemant@gentoo.org> xmmplayer-0.2.1.ebuild:
  New plugin for xmms, which uses mplayer to play movies. This should replace
  avi-xmms. Thanks to: archan <archanp@hotpop.com> in bug #26377
