@@ -1,6 +1,8 @@
-MD5 9f65c3b624cfb9a266a2c87b3c5daff4 ChangeLog 807
-MD5 c7a00edc7f763f3d89c7d4a917c18b46 metadata.xml 180
+MD5 955936fc40f316964c2c3dd9def2b70e xmmplayer-0.3.3.ebuild 764
 MD5 1c5c5ea542301ab12d2a5d5f962a5ec0 xmmplayer-0.2.1.ebuild 763
+MD5 5ccebbeb33510467fc24fc3ec351cb1d ChangeLog 958
 MD5 2f2282a0c6900d38768ae3a9ac2f604e xmmplayer-0.3.1.ebuild 763
+MD5 c7a00edc7f763f3d89c7d4a917c18b46 metadata.xml 180
 MD5 7bd0c4a0449bd0dc41a7e73bacc8b24f files/digest-xmmplayer-0.2.1 67
 MD5 4ba76c0357172a99f660e0b12e45982c files/digest-xmmplayer-0.3.1 67
+MD5 557b61d3aa83aba0a057ae1279f1a1a8 files/digest-xmmplayer-0.3.3 67
