@@ -1,0 +1,24 @@
+# Copyright 1999-2004 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/xmmplayer/Attic/xmmplayer-0.3.3.ebuild,v 1.1 2004/03/30 18:02:38 eradicator Exp $
+
+DESCRIPTION="XMMPlayer is an input plugin for XMMS"
+HOMEPAGE="http://thegraveyard.org/xmmplayer.php"
+SRC_URI="http://thegraveyard.org/files/${P}.tar.gz"
+
+SLOT="0"
+LICENSE="GPL-2"
+KEYWORDS="~x86 ~ppc ~sparc ~alpha"
+
+DEPEND="media-sound/xmms
+	media-video/mplayer"
+
+src_install() {
+	make DESTDIR=${D} libdir=`xmms-config --input-plugin-dir` install || die
+	dodoc AUTHORS COPYING README
+}
+
+pkg_postinst() {
+	einfo "*** WARNING: XMMS will play all mplayer supported file"
+	einfo "once the mplayer input plugin is configured"
+}
